# oaAnsible

./: .ansible-lint  .gitignore  .prettierignore  .prettierrc.yaml  .yamllint  KAMPUS-RIG-DEPLOYMENT.md  README.md  ROLES_REFERENCE.md  TODO.md  ansible-performance.cfg  ansible.cfg  debug-vault.yml  default.config.yml  deploy-macos-api.yml  dev-cleanup.yml  inventory  main.yml  requirements.yml  test-ml-setup.yml
docs/: ARCHITECTURE.md  COMPLETE_ARCHITECTURE_GUIDE.md  ENVIRONMENT_SYSTEM.md  FINAL_ARCHITECTURE_SUMMARY.md  MIGRATION_GUIDE.md  PERFORMANCE_AUDIT.md  PROJECT_CHANGELOG.md  QUICK_REFERENCE.md  README.md  SCRIPT_USAGE.md  SYSTEM.md  TROUBLESHOOTING.md  UBUNTU_ONBOARDING.md  WIFI_SETUP.md  WORKFLOW.md  alpr-integration.md  component-system.md  components.md  server-api.md  zsh_enhancement.md
group_vars/: all.yml
inventory/: alpr-preprod.yml  alpr-prod.yml  alpr-staging.yml  camguard-test.yml  dynamic_inventory.py  dynamic_inventory.sh  evenko-camguard-all-prod.yml  evenko-camguard-prod.yml  evenko-preprod.yml  evenko-prod.yml  evenko-tracker-prod.yml  f1-preprod.yml  f1-prod.yml  f1-staging.yml  kai-devserver.yml  main.yml  ml-local-dev.yml  ml-macos-dev.yml  ml-remote-server.yml  ml-ubuntu-servers.yml  orangepi-devices.yml  production  spectra-preprod.yml  spectra-prod.yml  spectra-staging.yml  storage-servers.yml  ubuntu-servers.yml
macos-api/: .flake8  .gitignore  README.md  __init__.py  check.sh  format.sh  main.py  pyproject.toml  requirements.txt
macos-api/macos_api/: __init__.py  middleware.py
macos-api/macos_api/core/: config.py
macos-api/macos_api/models/: health_schemas.py  schemas.py
macos-api/macos_api/routers/: __init__.py  actions.py  camera.py  camguard.py  health.py  screenshots.py  tracker.py
macos-api/macos_api/services/: __init__.py  actions.py  camera.py  camguard.py  display.py  health.py  security.py  standardized_metrics.py  system.py  temperature.py  tracker.py  utils.py
playbooks/: README.md  deploy-macos-api.yml  deploy-macos-tracker.yml  dev-cleanup.yml  enhance-macos-shell.yml  fix-uv-path.yml  macos-full.yml  macos.yml  onboard-ml-macos.yml  onboard-ml-server.yml  onboard-ubuntu-server.yml  orangepi-full.yml  orangepi-onboarding.yml  platform-detection.yml  test-uv-python.yml  ubuntu-full.yml  (+3 more)
(+582 files in other folders)
